--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Deforestation Detection</title>
 </head>
 <body>
-    <h1>Deforestation Detection</h1>
+    <h1>Deforestation Detection Using Quadtree</h1>
     
     <form id="upload-form" enctype="multipart/form-data">
         <label>Before Image:</label>
